# GoldenSignalsAIv4

./: .coverage  .dockerignore  .env  .env.example  .flake8  .gitignore  .gitmessage  .lintstagedrc.json  .pids  .pre-commit-config.yaml  .prettierrc.json  .servers.pid  ADAPTIVE_LEARNING_ARCHITECTURE.md  AFTER_HOURS_HANDLING.md  AGENT_COMMUNICATION_ARCHITECTURE.md  AGENT_SIGNALS_PERFORMANCE_GUIDE.md  AI_ANALYST_IMPLEMENTATION_PLAN.md  AI_CHAT_FUTURE_ENHANCEMENTS.md  AI_LAB_CONSOLIDATION_PLAN.md  AI_LAB_INTEGRATION_STATUS.md  AI_LAB_INTEGRATION_SUMMARY.md  AI_PLATFORM_TRANSFORMATION_PLAN.md  AI_PROPHET_IMPLEMENTATION_SUMMARY.md  AI_PROPHET_REIMAGINED_VISION.md  AI_PROPHET_TRADINGVIEW_TOOLS_VISION.md  AI_SIGNALS_PLATFORM_VISION.md  AI_TRADING_LAB_MILESTONES.md  API_DOCUMENTATION.md  API_DOCUMENTATION_SUMMARY.md  APPLICATION_RUNNING_GUIDE.md  ARCHITECTURE_CONSOLIDATION_PLAN.md  BACKTESTING_ACCURACY_GUIDE.md  BACKTESTING_ENHANCEMENT_IMPLEMENTATION.md  BACKTESTING_ENHANCEMENT_PLAN.md  BACKTESTING_ENHANCEMENT_SUMMARY.md  BACKTESTING_MODULE_TEST_REPORT.md  BLUEPRINT_SUMMARY.md  BUILD_AND_RUN_SUMMARY.md  CHART_SIMPLIFICATION_SUMMARY.md  CHART_UX_IMPROVEMENTS.md  (+308 more)
.github/: CODEOWNERS  GITHUB_SETUP_GUIDE.md  GITHUB_TOOLS_GUIDE.md  claude.md  claude.yml  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml  renovate.json  stale.yml
AlphaPy/: __init__.py  config.py  data.py  models.py
agents/: README.md  __init__.py  advanced_model_agents.txt  agent_factory.py  base.py  base_agent.py  comprehensive_agent_registry.py  correlation_agent.py  external_model_service.py  factory.py  feedback_loop.py  finbert_sentiment_agent.py  liquidity_prediction_agent.py  lstm_forecast_agent.py  market_regime_classification_agent.py  mean_reversion.py  ml_classifier_agent.py  ml_registry.py  momentum.py  multi_agent_consensus.py  news_arbitrage_agent.py  orchestrator.py  real_time_sentiment_analyzer.py  reversion_agent.py  rsi_macd_agent.py  sentiment_analysis.py  smart_execution_agent.py  strategy_profile_router.py  technical_analysis.py  unified_base_agent.py  volume_analysis.py
alembic/: env.py
arbitrage/: __init__.py  agents.py  execution.py
archive/: README.md  advanced_trading_system.py  backtest_research.py  basic_trading_system.py  factory.py
backend/: app.py  log_config.py  models.py  package.json  test_agent_runner.py
backtesting/: __init__.py  options_backtest.py  test_backtester.py
build_scripts/: build_application_files.py  build_docs_files.py  build_domain_files.py  build_infrastructure_files.py  build_presentation_files.py  build_project.py  build_root_files.py
config/: logging_config.py  performance.yml  prometheus.yml  settings.py  thresholds.yaml
daily_notes/: 2025-06-23.md
docker/: README.md
docs/: 30_year_data_architecture.md  4_WEEK_IMPLEMENTATION_PLAN.md  API_PROVIDERS.md  ARCHITECTURE_REVIEW.md  CHART_COMPLETION_PLAN.md  CHART_CONSOLIDATION_GUIDE.md  CHART_ENHANCEMENTS_SUMMARY.md  CHART_LIBRARY_COMPARISON.md  CLEANUP_AND_MODULARIZATION_SUMMARY.md  DOMAIN.md  FINAL_IMPLEMENTATION_STATUS.md  FUTURE_ENHANCEMENTS.md  GOLDEN_EYE_CHART_INTEGRATION_PLAN.md  GOLDEN_EYE_IMPLEMENTATION.md  GUARDRAILS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LLM_ARCHITECTURE_COMPARISON.md  LLM_CENTRIC_ARCHITECTURE_ANALYSIS.md  LLM_CENTRIC_IMPLEMENTATION_PLAN.md  MASTER_DOCUMENTATION.md  README.md  REAL_TIME_DATA_INTEGRATION.md  TECHNICAL_INDICATORS_COMPLETE.md  TECHNOLOGY_ASSESSMENT.md  chart_upgrade_todo.md  options_trading_demo.py  professional-chart-upgrade-plan.md  ui_ux_enhancement_plan.md
domain/: __init__.py  signal_engine.py
examples/: options_trading_demo.py
frontend/: .cursorrules  .env.example  .eslintrc.js  .eslintrc.json  BEAUTIFUL_THEME_RESTORED.md  DUPLICATE_FUNCTIONS_FIXED.md  Dockerfile  ENHANCED_UI_ARCHITECTURE.md  FINAL_UI_IMPLEMENTATION.md  FUNCTION_ORDER_FIXED.md  README.md  UI_IMPLEMENTATION_STATUS.md  UI_IMPROVEMENTS_GUIDE.md  chart-test-status.md  check-context.sh  clean-start.sh  cleanup-redundant-files.sh  cypress.config.ts  docker-compose.yml  env.example  env.test  eslint.config.js  index.html  issue_closure_summary.json  jest.config.js  package-lock.json  package.json  signal-rules.json  tailwind.config.js  test-chart-status.md  test-live-data.html  test-ui.html  tsconfig.json  verify-ui.md  vite-env.d.ts  vite.config.ts  webpack.optimization.js
frontend-nextjs/: package-lock.json  package.json
governance/: __init__.py  audit.py  constraints.py  error_handling.py
infrastructure/: __init__.py  agent_data_sources.py  config_manager.py  data_fetcher.py  data_sources.py  dependency_container.py  deployment_manager.py  env_validator.py  error_handler.py  error_handling.py  monitoring.py  security.py  task_queue.py
integration/: README.md  __init__.py  external_cache.py  external_model_service.py
k8s/: deployment.yaml  istio.yaml  network-policies.yaml
logs/: signal_runs.jsonl
mcp_servers/: agent_bridge_server.py  agent_communication_mcp.py  base_server.py  client.py  execution_management_mcp.py  market_data_server.py  mcp_gateway.py  portfolio_management_server.py  rag_query_mcp.py  risk_analytics_mcp.py  simple_trading_mcp.py  trading_signals_server.py  universal_market_data_mcp.py
ml_infrastructure/: model_registry.py
ml_models/: forecast_model.pkl  sentiment_model.pkl
ml_training/: README_LIVE_EVALUATION.md  create_basic_models.py  evaluate_live_transformer.py  evaluate_transformer.py  feature_engineering.py  fix_yfinance_issue.py  options_pricing.py  reinforcement_learning.py  run_evaluation.py  test_ml_training.py  train_demo_models.py  train_models.py  train_production_models.py  train_robust_models.py  training_log.txt  training_pipeline.py
monitoring/: __init__.py  agent_dashboard.py  prometheus-prod.yml  prometheus.yml
notifications/: __init__.py  alert_manager.py
optimization/: rl_optimizer.py
orchestration/: data_feed.py  supervisor.py  test_workflow.py
presentation/: __init__.py
project_scripts/: create_part1.py  create_part2a.py  create_part2b.py  create_part2c.py  create_part3a.py  create_part3b.py  (+13 more)
(+2105 files in other folders)
