[tool.poetry]
name = "goldensignalsai"
version = "0.1.0"
description = "AI-powered trading signal generator"
authors = ["Isaac Buziba <isaacbuz@gmail.com>"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "infrastructure" },
    { include = "services" },
    { include = "domain" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
loguru = "^0.7.0"
dependency-injector = "^4.46.0"
memory-profiler = "^0.61.0"
psutil = "^7.0.0"
torch = "^2.7.0"
scikitlearn = "^1.6.1"
pytest-cov = "^6.1.1"
networkx = "^3.4.2"
stable-baselines3 = "^2.6.0"
gym = "^0.26.2"
ta-lib = "^0.6.3"
scipy = "^1.15.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
websockets = "^10.4"
alpaca-trade-api = "^2.3.0"
yfinance = "^0.2.4"
alpha-vantage = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
goldensignalsai = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=. --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
