[tool.poetry]
name = "GoldenSignalsAI"
version = "1.1.1"
description = "AI-driven stock trading system"
authors = ["Isaac Buziba"]
[tool.poetry.dependencies]
slowapi = "^0.1.8"
fastapi-limiter = "^0.1.5"
python = ">=3.10,<3.13"
urllib3 = "1.26.20"
pillow = "10.4.0"
psutil = "5.9.8"
stable-baselines3 = "2.6.0"
boto3 = "^1.34.0"
tensorflow = "2.16.1"
tensorflow-metal = { version = "1.2.0", markers = "sys_platform == 'darwin'" }
scikit-learn = "1.5.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
autogluon = "1.2.0"
seqeval = "^1.2.2"
langchain = "0.2.16"
gymnasium = "0.29.1"
joblib = "^1.4.2"
lightgbm = "^4.3.0"
scipy = "^1.11.4"
ta-lib = "0.4.32"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
yfinance = "^0.2.0"
backtrader = "^1.9.0"
xgboost = "^2.1.1"
transformers = "^4.46.1"
alpaca-py = "0.40.0"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
jmespath = "^1.0.1"
fastapi = "0.115.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = "3.3.0"
quantstats = "^0.0.64"
uvicorn = "0.30.6"
websocket-client = "^0.39.0"
python-dotenv = "^1.0.1"
numba = "^0.58.0"
firebase-admin = "^6.2.0"
msal = "^1.24.0"
azure-storage-blob = "^12.19.0"
horovod = { version = "^0.28.1", extras = ["tensorflow"] }
optuna = "^3.6.1"
dash = "^2.17.1"
plotly = "^5.22.0"
pydantic-settings = "^2.5.2"
click = "^8.1.7"
kafka-python = "^2.0.2"
pybreaker = "^1.1.0"
mlflow = "^2.16.2"
dask = "^2024.10.0"
opentelemetry-sdk = "^1.27.0"
twilio = "^9.3.0"
tweepy = "^4.14.0"
prefect = "^2.19.7"
aiohttp = "^3.9.5"
statsmodels = "^0.14.2"
ray = "^2.35.0"
ta = "^0.10.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
