[tool.poetry]
name = "goldensignalsai"
version = "3.0.0"
description = "Next-Generation AI Trading Platform with Advanced Agentic Architecture"
authors = ["Isaac Buziba <isaacbuz@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^10.4"
python-socketio = "^5.10.0"

# ML & Deep Learning
torch = "^2.8.0"
transformers = "^4.35.0"
accelerate = "^0.24.0"
diffusers = "^0.24.0"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
catboost = "^1.2.2"

# Financial Data & Trading
yfinance = "^0.2.22"
alpaca-trade-api = "^3.2.0"
polygon-api-client = "^1.12.0"
ccxt = "^4.4.98"
quantlib = "^1.32"
ta-lib = "^0.4.28"
pandas-ta = "^0.3.14b"
vectorbt = "^0.26.0"

# Data Processing
pandas = "^2.1.3"
polars = "^0.20.0"
numpy = "^1.25.2"
numba = "^0.59.0"
dask = "^2023.12.0"

# Database & Caching
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
motor = "^3.3.2"

# Streaming & Real-time
kafka-python = "^2.0.2"
aiokafka = "^0.9.0"
pika = "^1.3.2"
aio-pika = "^9.3.1"

# Monitoring & Observability
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-instrumentation-fastapi = "^0.52b0"
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}

# Security
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = ">=42.0.4"

# Configuration & Environment
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
dynaconf = "^3.2.4"

# API & HTTP
httpx = "^0.27.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"

# Task Queue & Background Jobs
celery = {extras = ["redis"], version = "^5.3.4"}
rq = "^2.4.1"

# Visualization & Plotting
plotly = "^5.17.0"
dash = "^2.14.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

# Testing & Development
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"

# Code Quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

# Utilities
loguru = "^0.7.2"
rich = "^13.7.0"
typer = "^0.9.0"
click = "^8.1.7"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
notebook = "^7.0.6"
jupyterlab = "^4.0.9"

[tool.poetry.scripts]
# CLI entrypoints
goldensignals = "src.main:app"
gsai = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
